# BeardGit

./: .gitignore  .prettierignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PROJECT_STATUS.md  README.es.md  README.md  SECURITY.md  cli-versions.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  stylelint.config.cjs  vite.config.js  vitest.config.ts
.cargo/: audit.toml
.codegraph/: daemon.pid
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  (+3 more)
crates/: CLAUDE.md
crates/ai-provider/: Cargo.toml
crates/ai-provider/src/: error.rs  lib.rs  mock.rs  types.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: ai_background.rs  ai_commands.rs  commands.rs  event_sink.rs  ipc_error.rs  lib.rs  state.rs  task_commands.rs  task_events.rs  terminal_commands.rs  terminal_sink.rs
crates/app-core/src/commands/: advanced.rs  ai_background.rs  bisect.rs  branch.rs  ci.rs  clean.rs  cli_auth.rs  clone.rs  command_runner.rs  commit.rs  config.rs  conflict.rs  diff.rs  file_editor.rs  folder_count.rs  gitignore.rs  graph.rs  graph_cache.rs  helpers.rs  init.rs  issues.rs  logging.rs  mod.rs  mr_pr.rs  patch.rs  project.rs  provider_auth.rs  reflog.rs  releases.rs  remote.rs  repo_config.rs  repository.rs  requests.rs  settings.rs  staging.rs  stash.rs  submodule.rs  tag.rs  theme.rs  worktree.rs
crates/auth/: Cargo.toml
crates/auth/src/: credential_file.rs  credential_store.rs  error.rs  lib.rs  machine_key.rs  pat.rs
crates/claude-code/: Cargo.toml
crates/claude-code/src/: attribution.rs  commands.rs  config.rs  conversations.rs  detect.rs  lib.rs  sessions.rs  worktrees.rs
crates/cli-provider/: Cargo.toml
crates/cli-provider/src/: auth.rs  detail.rs  error.rs  github.rs  gitlab.rs  lib.rs  list.rs  parsers.rs  releases.rs  review.rs  runner.rs  types.rs  write.rs
crates/cli-provider/src/github/: checkout.rs  issues.rs  labels.rs  lifecycle.rs  mod.rs  mr_pr.rs  releases.rs  repo_create.rs  reviewers.rs
crates/cli-provider/src/gitlab/: checkout.rs  discussions.rs  issues.rs  labels.rs  lifecycle.rs  mod.rs  mr_pr.rs  releases.rs  repo_create.rs  reviewers.rs
crates/cli-provider/tests/fixtures/: gh_issue_detail.json  gh_issue_list.json  gh_label_list.json  gh_milestones.json  gh_release_list.json  gh_release_view.json  gh_release_view_null_assets.json  gh_release_view_null_body.json  glab_issue_detail.json  glab_issue_list.json  glab_issue_notes.json  glab_label_list.json  glab_milestones.json  glab_release_list.json  glab_release_view.json
crates/forge-provider/: Cargo.toml
crates/forge-provider/src/: error.rs  lib.rs  mock.rs  types.rs
crates/git-engine/: Cargo.toml
crates/git-engine/benches/: walk.rs
crates/git-engine/src/: bisect.rs  blame.rs  branch_cleanup.rs  clean.rs  cli.rs  commits.rs  config.rs  conflict.rs  diff.rs  error.rs  file_content.rs  gitignore.rs  hunk_staging.rs  interactive_rebase.rs  lib.rs  operations.rs  patch.rs  reflog.rs  remote.rs  rename_branch.rs  repository.rs  reset.rs  staging.rs  submodule.rs  test_support.rs  workdir_tree.rs  worktree.rs
crates/github-api/: Cargo.toml
crates/github-api/src/: client.rs  lib.rs  provider.rs  types.rs
crates/github-api/tests/: list_workflows.rs  retry_and_cancel.rs  trigger_workflow.rs
crates/gitlab-api/: Cargo.toml
crates/gitlab-api/src/: client.rs  jobs.rs  lib.rs  pipelines.rs  provider.rs  types.rs
crates/gitlab-api/tests/: list_workflows.rs  retry_and_cancel.rs  trigger_workflow.rs
crates/graph-builder/: Cargo.toml
crates/graph-builder/benches/: layout.rs
crates/graph-builder/src/: dag.rs  layout.rs  lib.rs  viewport.rs
crates/graph-builder/tests/: incremental_prepend.rs
crates/mutation-events/: Cargo.toml
crates/mutation-events/src/: emit.rs  flags.rs  guard.rs  kind.rs  lib.rs  snapshot.rs
crates/mutation-events/tests/: integration.rs
crates/provider/: Cargo.toml
crates/provider/src/: error.rs  http_helpers.rs  kind.rs  lib.rs  log_preprocessor.rs  mock.rs  traits.rs  types.rs
crates/requests-runner/: Cargo.toml
crates/requests-runner/src/: env.rs  error.rs  executor.rs  history.rs  lib.rs  parser.rs  resolver.rs  seed.rs  types.rs
crates/requests-runner/src/codegen/: curl.rs  fetch.rs  httpie.rs  mod.rs  wget.rs
crates/storage/: Cargo.toml
crates/storage/src/: commits_cache.rs  config.rs  database.rs  error.rs  layout_cache.rs  lib.rs  logging.rs  project_cache.rs  theme.rs
crates/storage/src/themes/: beardgit_dark.toml  beardgit_light.toml  catppuccin_latte.toml  catppuccin_mocha.toml  dracula.toml  fjord_dark.toml  fjord_light.toml  github_dark.toml  github_light.toml  gitlab_dark.toml  gitlab_light.toml  gruvbox_dark.toml  monokai_pro.toml  nebula_dark.toml  nebula_light.toml  nord.toml  one_dark.toml  solarized_dark.toml  solarized_light.toml  tokyo_night.toml
crates/watcher/: Cargo.toml
crates/watcher/src/: ai_config.rs  ai_sessions.rs  lib.rs
docs/: index.html  robots.txt  sitemap.xml
e2e/: Dockerfile  README.md  run-in-docker.sh  run.sh  tsconfig.json  wdio.conf.ts
eslint-rules/: no-hex-in-svelte.cjs
messages/: en-US.json  es-ES.json
project.inlang/: settings.json
scripts/: build-favicons.mjs  build-og.html  build-og.mjs  build-screenshots.mjs  check-ipc-contract.mjs  download-cli-binaries.js  post-bundle-dmg.mjs
specs/: 01-async-hygiene-bisect.md  02-ci-test-gaps.md  03-diff-size-caps.md  04-mutation-graph-pipeline.md  05-typed-ipc-contract.md  06-watcher-gitignore.md  07-deep-scroll-and-viewport.md  08-repo-state-container.md  09-backend-decomposition.md  10-feature-compare-refs.md  11-feature-branch-cleanup.md  12-feature-commit-signing.md  README.md
src/: CLAUDE.md  app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: README.md  default.json
src-tauri/dmg/: READ_BEFORE_RUN.md
src-tauri/icons/: icon.icns
src-tauri/resources/cli/: README.md
src-tauri/src/: lib.rs  main.rs
(+672 files in other folders)
