[workspace]
members = [
    "crates/git-engine",
    "crates/graph-builder",
    "crates/storage",
    "crates/requests-store",
    "crates/requests-runner",
    "crates/app-core",
    "crates/watcher",
    "crates/auth",
    "crates/gitlab-api",
    "crates/github-api",
    "crates/provider",
    "crates/task-runner",
    "crates/cli-provider",
    "crates/forge-provider",
    "crates/terminal",
    "crates/ai-provider",
    "crates/claude-code",
    "crates/codex",
    "crates/mutation-events",
    "crates/opencode",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "2026.6.1"
edition = "2024"
license = "BUSL-1.1"
authors = ["Adolfo Fuentes <adolfo_fuentes@outlook.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
git2 = { version = "0.20", features = ["vendored-openssl"] }
rusqlite = { version = "0.34", features = ["bundled"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
