[package]
name = "beardgit"
version.workspace = true
edition.workspace = true
description = "BeardGit"
authors = ["Adolfo Fuentes <adolfofuentes@metricool.com>"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beardgit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
app-core = { path = "../crates/app-core" }
github-api = { path = "../crates/github-api" }
task-runner = { path = "../crates/task-runner" }
terminal = { path = "../crates/terminal" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-dialog = "2.6.0"
storage = { path = "../crates/storage" }
dirs = "6"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tokio = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
# Pinned rev: the crate is git-only (not on crates.io), so without this pin
# different machines / CI runs could resolve different commits over time.
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev = "c4c45d503ea115a839aae718d02f79e7c7f0f673" }
