[package]
name = "claude-code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ai-provider = { path = "../ai-provider" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
which = "7"
dirs = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
