[package]
name = "claude-code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ai-provider = { path = "../ai-provider" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
which = "7"
dirs = "6"

[dev-dependencies]
tempfile = "3"
