[package]
name = "cli-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI-based provider operations for gh and glab"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
provider = { path = "../provider" }
