[package]
name = "cli-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI-based provider operations for gh and glab"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wait-timeout = "0.2"
provider = { path = "../provider" }
forge-provider = { path = "../forge-provider" }

[dev-dependencies]
tempfile = "3"
