[package]
name = "forge-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Forge provider trait and shared types (GitHub, GitLab, future forges)"

[features]
mock = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
provider = { path = "../provider" }
