[package]
name = "git-engine"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
test-support = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "walk"
harness = false
