[package]
name = "git-engine"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
test-support = []

[dev-dependencies]
# Self dev-dependency so `cargo bench`/tests build the crate with the
# `test-support` feature enabled, exposing `test_support::create_synthetic_repo`
# to the benches without leaking the helper into release builds.
git-engine = { path = ".", features = ["test-support"] }
criterion = { workspace = true }
serde_json = "1"

[[bench]]
name = "walk"
harness = false
