[package]
name = "github-api"
version.workspace = true
edition.workspace = true

[dependencies]
provider = { path = "../provider" }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
