[package]
name = "graph-builder"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
# Benches + the incremental-prepend property test build a synthetic repo via
# git-engine's test-support helper and walk it into `GraphCommit`s; the property
# test also drives real git mutations with git2. All dev-only, so graph-builder
# stays a pure (serde-only) crate at runtime.
git-engine = { path = "../git-engine", features = ["test-support"] }
git2 = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "layout"
harness = false
