[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
graph-builder = { path = "../graph-builder" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
toml = { workspace = true }
dirs = "6"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
